--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "Emmanuel Frimpong",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.15",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
     "eslint": "^7.0.0",
